# Programming_Assignment_4

./: README.md
Login Application/: CMakeLists.txt  LoginApp.cpp  LoginFunc.cpp  LoginFunc.h  LoginFunctions.cpp  LoginFunctions.h  otp.cpp
Login_Application/: CMakeLists.txt  LoginApp.cpp  LoginFunc.cpp  LoginFunc.h  usersData.xlsx
Text Editor/: CMakeLists.txt  TextEditorApp.cpp  TextEditorFunc.cpp  TextEditorFunc.h  test3.txt
